# claude-backtester

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN_ALT_DATA.md  README.md  pyproject.toml
.claude/: CLAUDE.md  P3P4_summary.md  READY.md  dependency_map.md
.claude/analysis/: analytics.md  data.md  engine.md  execution.md  portfolio.md  research.md  root.md  strategies.md  tests.md
.claude/done/: 3A.md  3B.md  3C.md  3D.md  4A.md  4B.md  4C.md  4D.md  4E.md
docs/: CONCEPTS.md  WORKFLOWS.md
scripts/: r5_multi_strategy.py
src/backtester/: __init__.py  cli.py  config.py  engine.py  result.py  types.py
src/backtester/analytics/: calendar.py  correlation.py  metrics.py  montecarlo.py  overfitting.py  regime.py  report.py  (+5 more)
tests/: conftest.py  test_activity_log.py  test_alt_data_e2e.py  test_altman_zscore.py  test_blackbox_config.py  test_blackbox_data.py  test_blackbox_prices.py  test_blackbox_strategy.py  test_broker.py  test_calendar.py  test_calendar_analytics.py  test_cli.py  test_correlation.py  test_cross_validation.py  test_data.py  test_dividend_growth.py  test_e2e.py  test_earnings_revisions.py  test_edgar_e2e.py  test_edgar_utils.py  test_engine.py  test_fees_extended.py  test_fundamental.py  test_gap_features.py  test_insider.py  test_institutional.py  test_integration.py  test_intermarket.py  test_limit_orders.py  test_macro_regime.py  test_metrics.py  test_montecarlo.py  test_multi_strategy.py  test_multi_timeframe.py  test_optimizer.py  test_overfitting.py  test_phase1_critical.py  test_phase2_coverage.py  test_phase4_adversarial.py  test_piotroski.py  (+17 more)
(+48 files in other folders)
