[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-backtester"
version = "0.1.0"
description = "A modular, research-grade stock backtesting engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "click>=8.0",
    "yfinance>=0.2.18",
    "matplotlib>=3.7",
    "pyarrow>=12.0",
    "exchange_calendars>=4.2",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
backtester = "backtester.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
